Revise up to sec. 4.3

--- a/paper.tex
+++ b/paper.tex
@@ -682,7 +682,7 @@ con latex}}
  $t_1=600\text{s}$.\notaL{Quizás podamos quitar la repetición de I y
    t} We employed the same geometry as that described in
  Sec. \ref{sec:current-density} \notaL{Lo inventé. ¿Es cierto?}
-The position of electrode corresponds to the upper left side of the
+The position of the electrode corresponds to the left side of the
 photograph. The variation of the optical properties across the
 sample is evident. We chose three positions $x_A=0.3\text{cm}$,
 $x_B=0.8\text{cm}$ and $x_C=1.7\text{cm}$ \notaL{¿Son correctos estos
@@ -690,7 +690,7 @@ $x_B=0.8\text{cm}$ and $x_C=1.7\text{cm}$ \notaL{¿Son correctos estos
 which we measured the reflectance spectra, also shown in the figure.
 We fitted the measurements using Eqs. \eqref{Eq:ECMR} and
 \eqref{Eq:Brugg} using the local porosity and the depth of the layer
-as adjustable parameters. \notal{¿Es cierto?} We obtained $p_{1A}=0.44$, $p_{1B}=0.42$, and
+as adjustable parameters. \notaL{¿Es cierto?} We obtained $p_{1A}=0.44$, $p_{1B}=0.42$, and
 $p_{1C}= 0.40$. \notaL{Falta decir cuáles fueron las profundidades}
 Location $A$ is
 closest to the electrode, while location $C$ is the furthest.
@@ -711,8 +711,9 @@ We also show in Fig. \ref{fig:DR3} the wavelength dependence of
   \label{fig:DR4}
 \end{figure}
 
-In Fig. \ref{fig:DR4} we shows side-view SEM micrographs taken at
-positions $A$, $B$, and $C$ of sample $G_1$ shown in
+In Fig. \ref{fig:DR4} we show side-view SEM micrographs of sample
+$G_1$ taken at the
+positions $A$, $B$, and $C$ shown in
 Fig. \ref{fig:DR3}. From these micrographs we can
 obtain the thicknesses of the porous layer at different
 positions. Thus, we obtained that for our sample $G_1$
@@ -720,7 +721,7 @@ $d_{1A}= 1320\text{nm}$, $ d_{1B} = 997\text{nm}$, and $d_{1c} = 605
 \text{nm}$. Similarly, for a second sample $G_2$, attacked with a
 larger current $I_2 =40 \text{mA}$, for a time $t_2=$?\notaL{El ancho no
   tiene sentido si no especificas el tiempo} we obtained the
-porosities \notaL{las posiciones ¿fueron las mismas?}, $p_{2A}= 0.76$, $p_{2B}=
+porosities \notaL{las posiciones ¿fueron las mismas que para $G_1$?}, $p_{2A}= 0.76$, $p_{2B}=
 0.73$, and $p_{2C}= 0.68$, and the corresponding depths $d_{2A}=1950\text{nm}$,
 $d_{2B}=1690\text{nm}$, and $d_{2C}= 1430\text{nm}$. \notaL{Quité otra
   frase vacía}\notaL{Me es importante entenderte: La profundidad la
@@ -733,74 +734,75 @@ $d_{2B}=1690\text{nm}$, and $d_{2C}= 1430\text{nm}$. \notaL{Quité otra
 \begin{figure}
   \centering
    \includegraphics[width=\textwidth]{Images/grinJDR}
-  \caption{(a)Current density calulated on different positions
-    $A$, $B$, and $C$ along the samples $G_1$ and $G_2$ (as shown in
-    Fig. \ref{fig:DR3}), for attack currents $I_1=5\text{mA}$ and
-    $I_2=40\text{mA}$ (left panel), obtained by properly scaling the
-    results of Fig. \ref{fig:DR1}. \notaL{Pon paréntesis de ambos
+  \caption{(a)Current density calculated by scaling the results of
+    Fig. \ref{fig:DR1} by the currents $I_1=5\text{mA}$ and
+    $I_2=40\text{mA}$ used to prepare samples $G_1$ and $G_2$.
+. \notaL{Pon paréntesis de ambos
       lados (a) y (b). El eje horizontal es $x$, no $a$. El eje
       vertical es $j_\perp$.}
-    (b)Attack speed $v=d/t$ obtained at different positions $A$, $B$,
+    (b)Etching rate speed $v=d/t$ obtained at different positions $A$, $B$,
     and $C$ over samples $G_1$ and $G_2$, where $d$ is the thickness
     as measured from SEM micrographs, as in Fig. \ref{fig:DR4},
-    and $t$ is the attack time.}
+    and $t$ is the etching time.\notaL{Falta una gráfica similar de
+      porosidad vs. x para las dos muestras}\notaL{Las escalas del
+      lado derecho no tienen que ver con las del lado
+      izquierdo. Deberías poner la misma escala de ambos lados, con el
+    mismo quiebre.}\notaL{Sugiero en la gráfica de la corriente
+    graficar las dos líneas completas, además de los 6 puntos
+    correpondientes a A, B y C de las dos muestras}}
   \label{fig:JDR}
 \end{figure}
-In Fig. \ref{fig:JDR} a) It is the relation of the current density $ J
-(mA / cm ^ 2) $ normalized with the electric current $ I (mA) $, we
-have $ J / I \ sim 1.2 \ \ a \ \ 0.5 (1 / cm ^ 2) $, when we apply it
-to two samples $ G1 (I = 5 \ \ mA) $ and $ G2 (I = 40 \ \ mA) $
-depending on the axis $ a $ $ (0.1 ... 2.0 \ \ cm) $, measured at
-points $ A (0.3 \ \ cm) $ and $ B (0.8 \ \ cm) $ and $ C (1.7 \ \ cm)
-$.
-The Fig. \ref{fig:JDR} b) we can calculate the attack speed $ v = d
-(J_i) / t (nm / s) $, where the depths (thickness $ d (J_i) $, $ i = $
-$ A (0.3 \ \ cm) $, $ B (0.8 \ \ cm) $ and $ C (1.7 \ \ cm)) $ taken
-in SEM micrographs $ d (J_i) (nm) $ and attack times $ G1 (t = 600 \ \
-s) $ and $ G2 (t = 200 \ \ s) $, depending on the axis $ a $ $ (0.1
-... 2.0 \ \ cm) $.
+In Fig. \ref{fig:JDR}(a) we show the actual current current density
+$j_\perp$ obtained from Fig. \ref{fig:DR1} by scaling by the actual
+current $I_1=5\text{mA}$ and $I_2=40\text{mA}$ employed to prepare
+samples $G_1$ and $G_2$, respectively. We indicate the values
+corresponding to positions $A$, $B$, and $C$ on the samples.
+\notaL{la
+  corriente que muestras no es normalizada}
+In Fig. \ref{fig:JDR} (b) we show the etching rate $v = d/t$ on
+selected positions of both samples obtained by dividing the thickness
+$d$ measured as in Fig. \ref{fig:DR4} by the etching time.
+
 \begin{figure}
   \centering
   \includegraphics[width=\textwidth]{Images/grinJD31}
-  \caption{The relationship of samples $ G1 (I = 5 mA) $ and $
-      G2 (I = 40 mA) $ were obtained to find: a) Attack speed with
-      current density for each point and b) Porosity as a function of
-      density current. With this we have the calibration curves for
-      the manufacture of any GRIN porous silicon structure   }
+  \caption{(a) Etching rate $v$ and (b) porosity $p$ as a function of the
+    density current $j_\perp$, obtained from Fig. \ref{fig:JDR}. We
+    show the data points and the results of power
+    law fits, yielding $v=0.53j_\perp^{0.79}$ and
+    $p=0.3j_\perp^0.24$, with corresponding correlation coefficients
+      $r_v^2=0.993$ and $r_p^2=0.989$ (here $v$ is in nm/s, $p$ is
+      dimensionless and $j_\perp$ is in mA/cm$^2$). \notaL{cambia J por $j_\perp$, V por $v$ y P
+      por $p$. Quita el letrero fitting data, la ecuación y el valor
+      de $R^2$}\notaL{Los ajustes ¿son correctos con estas unidades?}}
   \label{fig:Indr1}
 \end{figure}
-Fig. \ref{fig:Indr1} a) explicitly explain the relationships that
-emerge when designing samples $ G1 (I = 5 mA) $ and $ G2 (I = 40 mA)
-$. For the first case $ G1 $ the depths ($ 1320 \ \ nm $ to $ 605 \ \
-nm $) and the current densities ($ 6 \ \ mA / cm ^ 2 $ to $ 2.5 \ \ mA
-/ cm ^ 2 $), finding the attack speed $ 2.2 \ \ nm / s $ up to $ 1.1 \
-\ nm / s $ relation with depth and the time ($ 600 \ \ s $) of
-exposure of the sample, with the current density . We also find the
-depth ($ 1950 \ \ nm $ at $ 1430 \ \ nm $) and the current density ($
-50 \ \ mA / cm ^ 2 $ at $ 20 \ \ mA / cm ^ 2 $) as a function of the
-measurement points of the sample $ G2 (I = 40 mA) $. We were able to
-obtain the attack speed from $ 9.8 \ \ nm / s $ up to $ 7.1 \ \ m / s
-$ by relating to depth and time ($ 200 \ \ s $), with current
-density. Once the thickness of the monolayer and the attack time
-applied to them are known, calculate the attack speed according to the
-formula $ v = d / t $, for each of the current densities at the points
-$ A ( 0.3 \ \ cm) $ and $ B (0.8 \ \ cm) $ and $ C (1.7 \ \ cm)
-$. Then we fit a function to the attack speed points with the
-different current densities allowed by the anodizing condition. For a
-desired thickness $ d (J_i) $, calculate the attack time $ t $ (so, $
-t = v / d (J_i) $) and we can design any structure knowing the current
-density and the attack time. Fig. \ref{fig:Indr1} b) we find a
-relation of the porosity for each position with its determined current
-density. Therefore, if it is desired to manufacture a PS monolayer of
-a certain porosity with a certain end, it is enough to resort to the
-graphs of Fig. \ref{fig:Indr1} to determine the corresponding current
-density, attack speed and consequently the time, obtaining for that
-monolayer. The importance of the calibration curves is that it allows
-us to have a relationship of the porosities that can be reached (and
-by having control over the possible refractive indices) as a function
-of the current density and to be controlled to control the thickness
-of the layers that are manufactured, by controlling the attack time
-for each of the chosen currents.
+By relating among themselves the panels of Fig. \ref{fig:JDR} we
+may obtain the etching rate $v$ and the porosity $p$ as
+functions of the current density $j_\perp$. The results are shown in
+Fig. \ref{fig:Indr1}.\notaL{\ldots Apenas aquí dijiste cuál fue el
+  tiempo de ataque de la muestra dos: relating to depth and time ($
+  200 \ \ s $ ). ¿Es correcto este tiempo? Ponlo en su lugar}
+We fitted the data points with simple power laws and found
+$v=0.53j_\perp^{0.79}$ and $p=0.3j_\perp^{0.24}$, where $v$ is
+expressed in nm/s, $p$ is dimensionless and $j_\perp$ is expressed as
+mA/cm$^2$. The corresponding correlation coefficients are $r_v^2=0.993$
+and $r_p^2=0.989$. \notaL{Digresión teórica. El producto $pv$ es
+  proporcional a la cantidad de materia removida por segundo. En mi
+  opinión, esto debería ser proporcional a la corriente $pv\propto
+  j_\perp$. ¿Es correcto? A tí te sale algo parecido pero no
+  exacto. ¿Se podrá hacer un mejor ajuste tomando esto en cuenta?
+  ¿Alguien lo ha discutido en la literatura?}\notaL{En todo caso, todo
+  esto se tiene que rehacer usando la expresión teórica correcta y las
+  posiciones correctas}
+
+Fig. \ref{fig:Indr1} illustrates an advantage of using a cell
+geometry for which the current density may be obtained
+analytically. Namely, we can relate the etching rate and the
+porosity to the current density by taking measurements at
+different positions along just a few PS GRIN samples. Thus, it is much easier
+and faster to obtain calibration curves which are useful in the
+fabrication of PS photonic structures, GRIN or otherwise.
 
 \subsection{GRIN Porous Silicon Microcavities}
 \label{sec:grin-porous-silicon}
@@ -956,7 +958,6 @@ Being able to say that for each measurement point corresponds
 different calculated current densities, which correspond to different
 thicknesses at the end of manufacturing, clearly seeing the lateral
 gradient product of our experiment.
-
 
 \section{conclusion}
 \label{sec:conclusion}
